--- a/index.html
+++ b/index.html
@@ -6,31 +6,63 @@
     <title>Investment Calculator</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body class="h-[100dvh] grid grid-cols-3 grid-rows-2">
-    <aside class="bg-gradient-to-r from-indigo-400 from-8% via-sky-500 via-20% to-emerald-400 to-70% ... row-span-2 flex flex-col justify-between py-5 px-2">
-      <h1 class="text-2xl font-bold text-gray-950 dark:text-white px-6">Investment Calculator</h1>
-      <form class="w-full">
-        <div class="flex w-full flex-col" >
-          <label for="return-rate">Profitability</label>
-          <div class="flex">
-            <input value="%"  class="w-1/8" type="text" disabled>
-            <input type="text" class="w-1/2" id="return-rate">
-            <!-- <input type="text" class="1/1" value="mensal"> -->
-             <select id="evaluation-period" class="w-1/3">
-              <option value="monthly">Monthly</option>
-              <option value="yearly">Yearly</option>
-            </select>
-          </div>
+    <body class="h-[100dvh] grid grid-cols-3 grid-rows-2">
+      <aside class="bg-gradient-to-r from-indigo-400 from-8% via-sky-500 via-20% to-emerald-400 to-70% ... row-span-2 flex flex-col justify-between py-5 px-2">
+        <h1 class="text-2xl font-bold px-6">Investment Calculator</h1>
+          <form class="w-full">
+            <div class="flex w-full flex-col px-4 my-2">
+              <label for="starting-amount" class="font-bold text-gray-700">Starting Amount</label>
+              <div class="flex">
+                <input value="R$" class="w-1/7 rounded-l-lg text-center" type="text" disabled>
+                <input type="text" class="w-4/4 bg-white rounded-r-lg px-2" id="starting-amount" placeholder="0.00">
+              </div>
+            </div>
+            <div class="flex w-full flex-col px-4 my-2">
+              <label for="additional-contribution" class="font-bold text-gray-700">Additional contributions</label>
+              <div class="flex">
+                <input value="R$" class="w-1/7 rounded-l-lg text-center " type="text" disabled>
+                <input type="text" class="w-4/4 bg-white rounded-r-lg px-2" id="additional-contribution" placeholder="0.00">
+              </div>
+            </div>
+            <div class="flex w-full flex-col px-4 my-2">
+              <label for="after" class="font-bold text-gray-700">After</label>
+              <div class="flex">
+                <input type="text" class="w-2/3 bg-white rounded-l-lg px-2" id="after" placeholder="How many months/years">
+                <select id="period-after" class="w-1/3 rounded-r-lg border-l-2 border-emerald-600 bg-white text-center 
+                hover:bg-emerald-700 hover:text-white" >
+                  <option value="monthly">Monthly</option>
+                  <option value="yearly">Yearly</option>
+                </select>
+              </div>
+            </div>
+            <div class="flex flex-col px-4 my-2">
+              <label for="return-rate" class="font-bold text-gray-700">Return rate</label>
+              <div class="flex">
+                <input value="%" class="w-1/5 rounded-l-lg text-center" type="text" disabled>
+                <input type="text" class="w-5/6 bg-white px-1" id="return-rate" placeholder="0">
+                <select id="evaluation-period" class="w-1/2 rounded-r-lg border-l-2 border-emerald-600 bg-white text-center 
+                hover:bg-emerald-700 hover:text-white">
+                  <option value="monthly">Monthly</option>
+                  <option value="yearly">Yearly</option>
+                </select>
+              </div>
+            </div>
+            <div class="flex w-full flex-col px-4 my-2">
+              <label for="tax-rate" class="font-bold text-gray-700">Profit tax</label>
+              <div class="flex">
+                <input value="%" class="w-1/7 rounded-l-lg text-center " type="text" disabled>
+                <input type="text" class="w-4/4 bg-white rounded-r-lg px-1" id="tax-rate" placeholder="0">
+              </div>
+            </div>
+          </form>
+        <div class="flex h-12 px-6 my-8 w-full gap-2">
+          <button class="w-1/2 rounded-lg bg-emerald-950 text-slate-200 hover:bg-emerald-800 ">Calculate</button>
+          <button class="w-1/2 rounded-lg hover:bg-emerald-500 hover:text-white">Clean</button>
         </div>
-      </form>
-      <div class="flex w-full">
-        <button>Calculate</button>
-        <button>Clean</button>
-      </div>
-    </aside>
-    <main>
-      <p>Findings</p>
-    </main>
-    
-  </body>
+      </aside>
+      <main>
+        <p>Findings</p>
+      </main>
+      
+    </body>
 </html>
