--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
       <aside class="bg-gradient-to-r from-indigo-400 from-8% via-sky-500 via-20% to-emerald-400 to-70% ... row-span-2 flex flex-col justify-between py-5 px-2">
         <h1 class="text-2xl font-bold px-6">Investment Calculator</h1>
           <form id="investment-form" class="w-full">
-            <div class="flex w-full flex-col px-4 my-2">
+            <div class="flex w-full flex-col px-4 my-2 h-[4.25rem]" >
               <label for="starting-amount" class="font-bold text-gray-700">Starting Amount</label>
               <div class="flex">
                 <input value="R$" class="w-1/7 rounded-l-lg text-center" type="text" disabled>
                 <input type="text" class="w-4/4 bg-white rounded-r-lg px-2" id="starting-amount" name="starting-amount" placeholder="0.00" required>
               </div>
             </div>
-            <div class="flex w-full flex-col px-4 my-2">
+            <div class="flex w-full flex-col px-4 my-2 h-[4.25rem]">
               <label for="additional-contribution" class="font-bold text-gray-700">Additional contributions</label>
               <div class="flex">
                 <input value="R$" class="w-1/7 rounded-l-lg text-center " type="text" disabled>
-                <input type="text" class="w-4/4 bg-white rounded-r-lg px-2" id="additional-contribution" placeholder="0.00" name="additional-contribution" required>
+                <input type="text" class="w-4/4 bg-white rounded-r-lg px-2" id="additional-contribution" placeholder="0.00" name="additional-contribution">
               </div>
             </div>
-            <div class="flex w-full flex-col px-4 my-2">
+            <div class="flex w-full flex-col px-4 my-2 h-[4.25rem]">
               <label for="after" class="font-bold text-gray-700">After</label>
               <div class="flex">
                 <input type="text" class="w-2/3 bg-white rounded-l-lg px-2" id="after" name="after"  placeholder="How many months/years" required>
@@ -35,7 +35,7 @@
                 </select>
               </div>
             </div>
-            <div class="flex flex-col px-4 my-2">
+            <div class="flex flex-col px-4 my-2 h-[4.25rem]">
               <label for="return-rate" class="font-bold text-gray-700">Return rate</label>
               <div class="flex">
                 <input value="%" class="w-1/5 rounded-l-lg text-center" type="text" disabled>
@@ -47,7 +47,7 @@
                 </select>
               </div>
             </div>
-            <div class="flex w-full flex-col px-4 my-2">
+            <div class="flex w-full flex-col px-4 my-2 h-[4.25rem]">
               <label for="tax-rate" class="font-bold text-gray-700">Profit tax</label>
               <div class="flex">
                 <input value="%" class="w-1/7 rounded-l-lg text-center " type="text" disabled>
@@ -57,7 +57,7 @@
           </form>
         <div class="flex h-12 px-6 my-8 w-full gap-2">
           <button id="calculate-results" form="investment-form" type="submit" class="w-1/2 rounded-lg bg-emerald-950 text-slate-200 hover:bg-emerald-800 ">Calculate</button>
-          <button class="w-1/2 rounded-lg hover:bg-emerald-500 hover:text-white">Clean</button>
+          <button id="clear-form" class="w-1/2 rounded-lg hover:bg-emerald-500 hover:text-white">Clean</button>
         </div>
       </aside>
       <main>
