--- a/index.html
+++ b/index.html
@@ -60,8 +60,17 @@
           <button id="clear-form" class="w-1/2 rounded-lg hover:bg-emerald-500 hover:text-white">Clean</button>
         </div>
       </aside>
-      <main>
-        <p>Findings</p>
+      <main class="h-full">
+        <section id="charts-container">
+          <div class="h-[36dvh]">
+            <p>Final result</p>
+            <canvas id="final-money-distribution"></canvas>
+          </div>
+          <div class="h-[56dvh]">
+            <p>Progression</p>
+            <Canvas id="progression"></Canvas>
+          </div>
+        </section>
       </main>
       <script type="module" src="src/main.js"></script>
       
