First table formatting

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </aside>
       <main class="row-span-2 col-span-2">
-        <section id="charts-container" class="h-full">
+        <!-- <section id="charts-container" class="h-full">
           <div class="h-[36%] flex flex-col items-center pb-10">
             <p class="font-bold text-lg">Final result</p>
             <canvas id="final-money-distribution"></canvas>
@@ -70,6 +70,10 @@
             <p class="font-bold text-lg">Progression</p>
             <Canvas id="progression"></Canvas>
           </div>
+        </section> -->
+        <section id="table-container" class="h-full">
+          <p class="font-bold text-lg text-center">Monthly Results</p>
+          <table id="results-table" class="w-full max-h-full border border-separate"></table>
         </section>
       </main>
       <script type="module" src="src/main.js"></script>
